5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4162/executions/1759_2103.log
== TEST (2019-05-29 17:03:57) 
-- CODE:
from numpy import*
a= array(eval(input("insira os vetores de A: ")))
b= array(eval(input("insira os vetores de B: ")))
i=-1
iv=""
while i>=-len(b):
	iv=iv+b[i]
	i=-1
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 17:05:31) 
-- CODE:
from numpy import*
a= array(eval(input("insira os vetores de A: ")))
b= array(eval(input("insira os vetores de B: ")))
c=str(b)
i=-1
iv=""
while i>=-len(c):
	iv=iv+b[i]
	i=-1
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 17:05:36) 
-- CODE:
from numpy import*
a= array(eval(input("insira os vetores de A: ")))
b= array(eval(input("insira os vetores de B: ")))
c=str(b)
i=-1
iv=""
while i>=-len(c):
	iv=iv+b[i]
	i=-1
print(iv)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 17:06:07) 
-- CODE:
from numpy import*
a= array(eval(input("insira os vetores de A: ")))
b= array(eval(input("insira os vetores de B: ")))
c=str(b)
i=-1
iv=""
while i>=-len(c):
	iv=iv+c[i]
	i=-1
print(iv)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 17:06:36) 
-- CODE:
from numpy import*
a= array(eval(input("insira os vetores de A: ")))
b= array(eval(input("insira os vetores de B: ")))
c=str(b)
i=-1
iv=""
while i>=-len(c):
	iv=iv+c[i]
	i=-1
print(iv)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 17:07:00) 
-- CODE:
from numpy import*
a= array(eval(input("insira os vetores de A: ")))
b= array(eval(input("insira os vetores de B: ")))
c=str(b)
i=-1
iv=""
while i>=-len(c):
	iv=iv+c[i]
	i=i-1
	print(iv)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 17:07:15) 
-- CODE:
from numpy import*
a= array(eval(input("insira os vetores de A: ")))
b= array(eval(input("insira os vetores de B: ")))
c=str(b)
i=-1
iv=""
while i>=-len(c):
	iv=iv+c[i]
	i=i-1
print(iv)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 17:07:58) 
-- CODE:
from numpy import*
a= array(eval(input("insira os vetores de A: ")))
b= array(eval(input("insira os vetores de B: ")))
c=str(b)
i=-1
iv=""
while i>=-len(c):
	iv=iv+c[i]
	i=i-1
if a==c:
	print("ta indo")
else:
	print("vish")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 17:08:36) 
-- CODE:
from numpy import*
a= array(eval(input("insira os vetores de A: ")))
b= array(eval(input("insira os vetores de B: ")))
c=str(b)
d=str(a)
i=-1
iv=""
while i>=-len(c):
	iv=iv+c[i]
	i=i-1
if a==c:
	print("ta indo")
else:
	print("vish")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 17:08:44) 
-- CODE:
from numpy import*
a= array(eval(input("insira os vetores de A: ")))
b= array(eval(input("insira os vetores de B: ")))
c=str(b)
d=str(a)
i=-1
iv=""
while i>=-len(c):
	iv=iv+c[i]
	i=i-1
if c==d:
	print("ta indo")
else:
	print("vish")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 17:09:09) 
-- CODE:
from numpy import*
a= array(eval(input("insira os vetores de A: ")))
b= array(eval(input("insira os vetores de B: ")))
c=str(b)
d=str(a)
i=-1
iv=""
while i>=-len(c):
	iv=iv+c[i]
	i=i-1
print(iv)
if c==d:
	print("ta indo")
else:
	print("vish")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 17:11:29) 
-- CODE:
from numpy import*
a= array(eval(input("insira os vetores de A: ")))
b= array(eval(input("insira os vetores de B: ")))
i=0
j=-1
while i!=size(b):
	b[i]=b[j]
	i=i+1
	i=i-1
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 17:12:29) 
-- CODE:
from numpy import*
a= array(eval(input("insira os vetores de A: ")))
b= array(eval(input("insira os vetores de B: ")))
i=0
j=-1
k=0
while k!=size(b):
	b[i]=b[j]
	i=i+1
	i=i-1
	k=k+1
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 17:12:50) 
-- CODE:
from numpy import*
a= array(eval(input("insira os vetores de A: ")))
b= array(eval(input("insira os vetores de B: ")))
i=0
j=-1
k=0
while k!=size(b):
	b[i]=b[j]
	i=i+1
	j=j-1
	k=k+1
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 17:13:25) 
-- CODE:
from numpy import*
a= array(eval(input("insira os vetores de A: ")))
b= array(eval(input("insira os vetores de B: ")))
i=0
j=-1
k=0
while k!=size(b):
	b[i]=b[j]
	i=i+1
	j=j-1
	k=k+1
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 17:16:53) 
-- CODE:
from numpy import*
a= array(eval(input("insira os vetores de A: ")))
b= array(eval(input("insira os vetores de B: ")))
i=0
j=-1
k=0
while k!=size(b):
	b[i]=b[j]
	i=i+1
	j=j-1
	k=k+1
	print(b),print(i,j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 17:25:15) 
-- CODE:
from numpy import*
a= array(eval(input("insira os vetores de A: ")))
b= array(eval(input("insira os vetores de B: ")))
i=0
j=-1
k=0
while k!=size(b):
	b[i]=b[j]
	print(b),print(i,j)
	i=i+1
	j=j-1
	k=k+1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 17:25:30) 
-- CODE:
from numpy import*
a= array(eval(input("insira os vetores de A: ")))
b= array(eval(input("insira os vetores de B: ")))
i=0
j=-1
k=0
while k!=size(b):
	b[i]=b[j]
	print(b),print(i,j)
	i=i+1
	j=j-1
	k=k+1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 17:25:30) 
-- CODE:
from numpy import*
a= array(eval(input("insira os vetores de A: ")))
b= array(eval(input("insira os vetores de B: ")))
i=0
j=-1
k=0
while k!=size(b):
	b[i]=b[j]
	print(b),print(i,j)
	i=i+1
	j=j-1
	k=k+1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 17:25:30) 
-- CODE:
from numpy import*
a= array(eval(input("insira os vetores de A: ")))
b= array(eval(input("insira os vetores de B: ")))
i=0
j=-1
k=0
while k!=size(b):
	b[i]=b[j]
	print(b),print(i,j)
	i=i+1
	j=j-1
	k=k+1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 17:25:41) 
-- CODE:
from numpy import*
a= array(eval(input("insira os vetores de A: ")))
b= array(eval(input("insira os vetores de B: ")))
i=0
j=-1
k=0
while k!=size(b):
	b[i]=b[j]
	print(b),print(i,j)
	i=i+1
	j=j-1
	k=k+1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 17:25:42) 
-- CODE:
from numpy import*
a= array(eval(input("insira os vetores de A: ")))
b= array(eval(input("insira os vetores de B: ")))
i=0
j=-1
k=0
while k!=size(b):
	b[i]=b[j]
	print(b),print(i,j)
	i=i+1
	j=j-1
	k=k+1

-- EXECUTION TIME:
0.521044
-- TEST CASE 1:
---- input:
[1,3,5,7,9]
[2,4,6,8,10]
---- correct output:
10
8
6
7
9
---- user output:
[10  4  6  8 10]
0 -1
[10  8  6  8 10]
1 -2
[10  8  6  8 10]
2 -3
[10  8  6  8 10]
3 -4
[10  8  6  8 10]
4 -5
-- TEST CASE 2:
---- input:
[55,12,40]
[100,2,17]
---- correct output:
55
12
100
---- user output:
[17  2 17]
0 -1
[17  2 17]
1 -2
[17  2 17]
2 -3
-- TEST CASE 3:
---- input:
[2,3,5,7]
[11,13,17,19]
---- correct output:
19
17
13
11
---- user output:
insira os vetores de A: insira os vetores de B: [19 13 17 19]
0 -1
[19 17 17 19]
1 -2
[19 17 17 19]
2 -3
[19 17 17 19]
3 -4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 17:27:40) 
-- CODE:
from numpy import*
a= array(eval(input("insira os vetores de A: ")))
b= array(eval(input("insira os vetores de B: ")))
q=size(b)
c=zeros(b,dtype=int)
i=0
j=-1
k=0
while k!=size(b):
	c[i]=b[j]
	print(b),print(i,j)
	i=i+1
	j=j-1
	k=k+1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 17:28:09) 
-- CODE:
from numpy import*
a= array(eval(input("insira os vetores de A: ")))
b= array(eval(input("insira os vetores de B: ")))
q=size(b)
c=zeros(b,dtype=int)
i=0
j=-1
k=0
while k!=size(b):
	c[i]=b[j]
	print(c),print(i,j)
	i=i+1
	j=j-1
	k=k+1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 17:28:56) 
-- CODE:
from numpy import*
a= array(eval(input("insira os vetores de A: ")))
b= array(eval(input("insira os vetores de B: ")))
q=size(b)
c=zeros(b,dtype=int)
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 17:29:37) 
-- CODE:
from numpy import*
a= array(eval(input("insira os vetores de A: ")))
b= array(eval(input("insira os vetores de B: ")))
q=size(b)
c=zeros(b,dtype=int)
print(q)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 17:30:39) 
-- CODE:
from numpy import*
a= array(eval(input("insira os vetores de A: ")))
b= array(eval(input("insira os vetores de B: ")))
q=size(b)
c=zeros(q,dtype=int)
i=0
j=-1
k=0
while k!=size(b):
	c[i]=b[j]
	print(c),print(i,j)
	i=i+1
	j=j-1
	k=k+1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 17:30:42) 
-- CODE:
from numpy import*
a= array(eval(input("insira os vetores de A: ")))
b= array(eval(input("insira os vetores de B: ")))
q=size(b)
c=zeros(q,dtype=int)
i=0
j=-1
k=0
while k!=size(b):
	c[i]=b[j]
	print(c),print(i,j)
	i=i+1
	j=j-1
	k=k+1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 17:31:01) 
-- CODE:
from numpy import*
a= array(eval(input("insira os vetores de A: ")))
b= array(eval(input("insira os vetores de B: ")))
q=size(b)
c=zeros(q,dtype=int)
i=0
j=-1
k=0
while k!=size(b):
	c[i]=b[j]
	i=i+1
	j=j-1
	k=k+1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 17:38:50) 
-- CODE:
from numpy import*
a= array(eval(input("insira os vetores de A: ")))
b= array(eval(input("insira os vetores de B: ")))
q=size(b)
c=zeros(q,dtype=int)
i=0
j=-1
k=0
while k!=q:
	c[i]=b[j]
	i=i+1
	j=j-1
	k=k+1
while i!=q:
	r=max(c[i])
	g=max(a[i])
	if r>g:
		print(c[i])
	elif r<g:
		print(a[i])
	i=i+1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 17:39:45) 
-- CODE:
from numpy import*
a= array(eval(input("insira os vetores de A: ")))
b= array(eval(input("insira os vetores de B: ")))
q=size(b)
c=zeros(q,dtype=int)
i=0
j=-1
k=0
while k!=q:
	c[i]=b[j]
	i=i+1
	j=j-1
	k=k+1
while i!=q:
	r=max(c[i])
	g=max(a[i])
	i=i+1
print(r,g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 17:42:00) 
-- CODE:
from numpy import*
a= array(eval(input("insira os vetores de A: ")))
b= array(eval(input("insira os vetores de B: ")))
q=size(b)
c=zeros(q,dtype=int)
i=0
j=-1
k=0
while k!=q:
	c[i]=b[j]
	i=i+1
	j=j-1
	k=k+1
while i!=q:
	if c[i]>a[i]:
		print(c[i])
	if c[i]<a[i]:
		print(a[i])
	i=i+1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 17:43:43) 
-- CODE:
from numpy import*
a= array(eval(input("insira os vetores de A: ")))
b= array(eval(input("insira os vetores de B: ")))
q=size(b)
c=zeros(q,dtype=int)
i=0
j=-1
k=0
while k!=q:
	c[i]=b[j]
	i=i+1
	j=j-1
	k=k+1
	print(c[k],a[k])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 17:44:16) 
-- CODE:
from numpy import*
a= array(eval(input("insira os vetores de A: ")))
b= array(eval(input("insira os vetores de B: ")))
q=size(b)
c=zeros(q,dtype=int)
i=0
j=-1
k=0
while k!=q:
	c[i]=b[j]
	i=i+1
	j=j-1
	k=k+1
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 17:54:48) 
-- CODE:
from numpy import*
a= array(eval(input("insira os vetores de A: ")))
b= array(eval(input("insira os vetores de B: ")))
q=size(b)
c=zeros(q,dtype=int)
i=0
j=-1
k=0
while k!=q:
	c[i]=b[j]
	i=i+1
	j=j-1
	k=k+1
while k!=q:
	print(a[i],c[i])
	i=i+1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 17:55:18) 
-- CODE:
from numpy import*
a= array(eval(input("insira os vetores de A: ")))
b= array(eval(input("insira os vetores de B: ")))
q=size(b)
c=zeros(q,dtype=int)
i=0
j=-1
k=0
while k!=q:
	c[i]=b[j]
	i=i+1
	j=j-1
	k=k+1
	print(a[i],c[i])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 17:57:04) 
-- CODE:
from numpy import*
a= array(eval(input("insira os vetores de A: ")))
b= array(eval(input("insira os vetores de B: ")))
q=size(b)
c=zeros(q,dtype=int)
i=0
j=-1
k=0
while k!=q:
	c[i]=b[j]
	i=i+1
	j=j-1
	k=k+1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 17:58:24) 
-- CODE:
from numpy import*
a= array(eval(input("insira os vetores de A: ")))
b= array(eval(input("insira os vetores de B: ")))
q=size(b)
c=zeros(q,dtype=int)
i=0
j=-1
k=0
while k!=q:
	print(a[i-1],c[i-1])
	c[i]=b[j]
	i=i+1
	j=j-1
	k=k+1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 17:58:52) 
-- CODE:
from numpy import*
a= array(eval(input("insira os vetores de A: ")))
b= array(eval(input("insira os vetores de B: ")))
q=size(b)
c=zeros(q,dtype=int)
i=0
j=-1
k=0
while k!=q:
	print(a[i-1],c[i-1])
	c[i]=b[j]
	i=i+1
	j=j-1
	k=k+1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:01:04) 
-- CODE:
from numpy import*
a= array(eval(input("insira os vetores de A: ")))
b= array(eval(input("insira os vetores de B: ")))
q=size(b)
c=zeros(q,dtype=int)
i=0
j=-1
k=0
while k!=q:
	print(a[i-1],c[i-1])
	c[i]=b[j]
	i=i+1
	j=j-1
	k=k+1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:01:58) 
-- CODE:
from numpy import*
a= array(eval(input("insira os vetores de A: ")))
b= array(eval(input("insira os vetores de B: ")))
q=size(b)
c=zeros(q,dtype=int)
i=0
j=-1
k=0
while k!=q:
	print(a[i],c[i])
	c[i]=b[j]
	i=i+1
	j=j-1
	k=k+1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:02:35) 
-- CODE:
from numpy import*
a= array(eval(input("insira os vetores de A: ")))
b= array(eval(input("insira os vetores de B: ")))
q=size(b)
c=zeros(q,dtype=int)
i=0
j=-1
k=0
while k!=q:
	c[i]=b[j]
	i=i+1
	j=j-1
	k=k+1
		print(a[i-1],c[i-1])

-- ERROR:
File "XXXX", line 14
    print(a[i-1],c[i-1])
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:02:38) 
-- CODE:
from numpy import*
a= array(eval(input("insira os vetores de A: ")))
b= array(eval(input("insira os vetores de B: ")))
q=size(b)
c=zeros(q,dtype=int)
i=0
j=-1
k=0
while k!=q:
	c[i]=b[j]
	i=i+1
	j=j-1
	k=k+1
	print(a[i-1],c[i-1])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:04:21) 
-- CODE:
from numpy import*
a= array(eval(input("insira os vetores de A: ")))
b= array(eval(input("insira os vetores de B: ")))
q=size(b)
c=zeros(q,dtype=int)
i=0
j=-1
k=0
while k!=q:
	c[i]=b[j]
	i=i+1
	j=j-1
	k=k+1
	if a[i-1]>c[i-1]:
		print(a[i-1])
	if a[i-1]<c[i-1]:
		print(c[i-1])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 18:04:41) 
-- CODE:
from numpy import*
a= array(eval(input("insira os vetores de A: ")))
b= array(eval(input("insira os vetores de B: ")))
q=size(b)
c=zeros(q,dtype=int)
i=0
j=-1
k=0
while k!=q:
	c[i]=b[j]
	i=i+1
	j=j-1
	k=k+1
	if a[i-1]>c[i-1]:
		print(a[i-1])
	if a[i-1]<c[i-1]:
		print(c[i-1])

-- EXECUTION TIME:
0.382215
-- TEST CASE 1:
---- input:
[1,3,5,7,9]
[2,4,6,8,10]
---- correct output:
10
8
6
7
9
---- user output:
10
8
6
7
9
-- TEST CASE 2:
---- input:
[55,12,40]
[100,2,17]
---- correct output:
55
12
100
---- user output:
55
12
100
-- TEST CASE 3:
---- input:
[2,3,5,7]
[11,13,17,19]
---- correct output:
19
17
13
11
---- user output:
19
17
13
11
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
